--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -54,6 +54,7 @@ body {
     Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0;
   min-height: 100vh;
+  box-sizing: border-box;
 }
 
 .safe-area-overlay {
