feat: improve desktop mode for seemless builder v. presentation

--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -45,6 +45,10 @@
   --header-height: 60px;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   padding-top: var(--header-height);
   background-color: var(--bg-primary);
