chore: swap add-button color; enable up/dn keys on media-type dropdown

--- a/src/components/search/dropdown.css
+++ b/src/components/search/dropdown.css
@@ -77,6 +77,10 @@
   background-color: #34495e;
 }
 
+.dropdown-option.highlighted {
+  background-color: #2c3e50;
+}
+
 .dropdown-option-icon {
   display: flex;
   align-items: center;
