feat: allow user to add book covers by URL
adds a new modal in the even the user wants to add a direct image url
link. this is because of the inherent difficulty of retrieving accurate
and high quality cover art from just google books and openlibrary.

added google/duckduckgo links for the author/title query for easy
external searching

proxy openlibrary CORS error has been fixed to now passthrough aoife's
/api/openlibrary node.

--- a/src/components/search/mediaform.css
+++ b/src/components/search/mediaform.css
@@ -33,6 +33,13 @@
 
 .media-search-form.band .form-fields {
   flex: 1 1 auto;
+  gap: 12px;
+}
+
+.media-search-form.band .form-fields > .form-input,
+.media-search-form.band .form-fields > .input-with-button {
+  flex: 1 1 0;
+  min-width: 0;
 }
 
 .media-search-form.stack .form-fields {
